crates/engram-core/bindings/swift/engram_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void*_Nonnull uniffi_engram_core_fn_clone_memorystorehandle(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_engram_core_fn_free_memorystorehandle(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_engram_core_fn_constructor_memorystorehandle_new(RustBuffer db_path, RustBuffer key_bytes, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_engram_core_fn_method_memorystorehandle_find_by_entity(void*_Nonnull ptr, RustBuffer entity, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_engram_core_fn_method_memorystorehandle_get_memory(void*_Nonnull ptr, RustBuffer id, RustCallStatus *_Nonnull out_status
);
void uniffi_engram_core_fn_method_memorystorehandle_insert_memory(void*_Nonnull ptr, RustBuffer entity, RustBuffer attribute, RustBuffer value, RustBuffer source, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_engram_core_fn_method_memorystorehandle_record_count(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_engram_core_fn_func_decrypt_bytes(RustBuffer key_bytes, RustBuffer ciphertext, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_engram_core_fn_func_derive_key(RustBuffer password, RustBuffer salt, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_engram_core_fn_func_encrypt_bytes(RustBuffer key_bytes, RustBuffer plaintext, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_engram_core_fn_func_generate_salt(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_engram_core_fn_func_vault_list_markdown(RustBuffer vault_path, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_engram_core_fn_func_vault_read(RustBuffer vault_path, RustBuffer relative_path, RustCallStatus *_Nonnull out_status
);
void uniffi_engram_core_fn_func_vault_write(RustBuffer vault_path, RustBuffer relative_path, RustBuffer content, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_engram_core_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_engram_core_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_engram_core_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_u8(uint64_t handle
);
void ffi_engram_core_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_engram_core_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_i8(uint64_t handle
);
void ffi_engram_core_rust_future_free_i8(uint64_t handle
);
int8_t ffi_engram_core_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_u16(uint64_t handle
);
void ffi_engram_core_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_engram_core_rust_future_complete_u16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_i16(uint64_t handle
);
void ffi_engram_core_rust_future_free_i16(uint64_t handle
);
int16_t ffi_engram_core_rust_future_complete_i16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_u32(uint64_t handle
);
void ffi_engram_core_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_engram_core_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);